[package]
name = "future-iter"
description = "Iterator utils for futures"
version = "0.1.0"
homepage = "https://github.com/ferreira-tb/future-iter"
repository = "https://github.com/ferreira-tb/future-iter"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.63"

[lints.clippy]
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"

[lints.clippy.pedantic]
level = "deny"
priority = -1

[dependencies.tokio]
version = "1.38"
optional = true
default-features = false
features = ["rt-multi-thread", "macros"]

[features]
default = ["tokio"]
tokio = ["dep:tokio"]